add life cycle badge and app website status badge

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,9 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![R build status](https://github.com/Metropolitan-Council/regionalparks.acs/workflows/R-CMD-check/badge.svg)](https://github.com/Metropolitan-Council/regionalparks.acs/actions)
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
+[![App](https://img.shields.io/website-up-down-green-red/http/shields.io.svg)](https://metrotransitmn.shinyapps.io/regional-parks-acs/)
+
 <!-- badges: end -->
 
 The goal of regionalparks.acs is to visualize both regional parks and regional demographics. 
