--- a/Rpackages.bib
+++ b/Rpackages.bib
@@ -47,9 +47,9 @@
 
 @Manual{htmltools,
   title = {htmltools: Tools for HTML},
-  author = {{RStudio} and {Inc.}},
-  year = {2019},
-  note = {R package version 0.4.0},
+  author = {Joe Cheng and Carson Sievert and Winston Chang and Yihui Xie and Jeff Allen},
+  year = {2020},
+  note = {R package version 0.5.0},
   url = {https://CRAN.R-project.org/package=htmltools},
 }
 
