import sf; update bib; re-run raw data

--- a/Rpackages.bib
+++ b/Rpackages.bib
@@ -17,15 +17,15 @@
 @Manual{councilR,
   title = {councilR: Functions and Templates for the Metropolitan Council},
   author = {Liz Roten},
-  year = {2020},
   note = {R package version 0.1.0},
 }
 
 @Manual{dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
-  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+  author = {Hadley Wickham and Romain FranÃ§ois and Lionel {
+             Henry} and Kirill MÃ¼ller},
   year = {2020},
-  note = {R package version 1.0.0},
+  note = {R package version 1.0.2},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 
@@ -33,13 +33,13 @@
   title = {glue: Interpreted String Literals},
   author = {Jim Hester},
   year = {2020},
-  note = {R package version 1.4.1},
+  note = {R package version 1.4.2},
   url = {https://CRAN.R-project.org/package=glue},
 }
 
 @Manual{golem,
   title = {golem: A Framework for Robust Shiny Applications},
-  author = {Vincent Guyader and Colin Fay and Sébastien Rochette and Cervan Girard},
+  author = {Vincent Guyader and Colin Fay and SÃ©bastien Rochette and Cervan Girard},
   year = {2020},
   note = {R package version 0.2.1},
   url = {https://CRAN.R-project.org/package=golem},
@@ -72,9 +72,9 @@ Library},
 
 @Manual{processx,
   title = {processx: Execute and Control System Processes},
-  author = {Gábor Csárdi and Winston Chang},
+  author = {GÃ¡bor CsÃ¡rdi and Winston Chang},
   year = {2020},
-  note = {R package version 3.4.2},
+  note = {R package version 3.4.4},
   url = {https://CRAN.R-project.org/package=processx},
 }
 
@@ -82,7 +82,7 @@ Library},
   title = {shiny: Web Application Framework for R},
   author = {Winston Chang and Joe Cheng and JJ Allaire and Yihui Xie and Jonathan McPherson},
   year = {2020},
-  note = {R package version 1.4.0.2},
+  note = {R package version 1.5.0},
   url = {https://CRAN.R-project.org/package=shiny},
 }
 
@@ -115,8 +115,8 @@ Library},
 @Manual{data.table,
   title = {data.table: Extension of `data.frame`},
   author = {Matt Dowle and Arun Srinivasan},
-  year = {2019},
-  note = {R package version 1.12.8},
+  year = {2020},
+  note = {R package version 1.13.0},
   url = {https://CRAN.R-project.org/package=data.table},
 }
 
@@ -124,7 +124,7 @@ Library},
   title = {tigris: Load Census TIGER/Line Shapefiles},
   author = {Kyle Walker},
   year = {2020},
-  note = {R package version 0.9.4},
+  note = {R package version 1.0},
   url = {https://CRAN.R-project.org/package=tigris},
 }
 
@@ -132,7 +132,7 @@ Library},
   title = {fs: Cross-Platform File System Operations Based on 'libuv'},
   author = {Jim Hester and Hadley Wickham},
   year = {2020},
-  note = {R package version 1.4.1},
+  note = {R package version 1.5.0},
   url = {https://CRAN.R-project.org/package=fs},
 }
 
