--- a/Rpackages.bib
+++ b/Rpackages.bib
@@ -22,8 +22,8 @@
 
 @Manual{dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
-  author = {Hadley Wickham and Romain FranÃ§ois and Lionel {
-             Henry} and Kirill MÃ¼ller},
+  author = {Hadley Wickham and Romain François and Lionel {
+             Henry} and Kirill Müller},
   year = {2020},
   note = {R package version 1.0.2},
   url = {https://CRAN.R-project.org/package=dplyr},
@@ -39,7 +39,7 @@
 
 @Manual{golem,
   title = {golem: A Framework for Robust Shiny Applications},
-  author = {Vincent Guyader and Colin Fay and SÃ©bastien Rochette and Cervan Girard},
+  author = {Vincent Guyader and Colin Fay and Sébastien Rochette and Cervan Girard},
   year = {2020},
   note = {R package version 0.2.1},
   url = {https://CRAN.R-project.org/package=golem},
@@ -72,7 +72,7 @@ Library},
 
 @Manual{processx,
   title = {processx: Execute and Control System Processes},
-  author = {GÃ¡bor CsÃ¡rdi and Winston Chang},
+  author = {Gábor Csárdi and Winston Chang},
   year = {2020},
   note = {R package version 3.4.4},
   url = {https://CRAN.R-project.org/package=processx},
@@ -82,8 +82,8 @@ Library},
   title = {shiny: Web Application Framework for R},
   author = {Winston Chang and Joe Cheng and JJ Allaire and Yihui Xie and Jonathan McPherson},
   year = {2020},
-  note = {R package version 1.5.0},
-  url = {https://CRAN.R-project.org/package=shiny},
+  note = {R package version 1.5.0.9001},
+  url = {http://shiny.rstudio.com},
 }
 
 @Manual{pkgload,
@@ -116,7 +116,7 @@ Library},
   title = {data.table: Extension of `data.frame`},
   author = {Matt Dowle and Arun Srinivasan},
   year = {2020},
-  note = {R package version 1.13.0},
+  note = {R package version 1.13.2},
   url = {https://CRAN.R-project.org/package=data.table},
 }
 
