breaking with new rmd

--- a/Rpackages.bib
+++ b/Rpackages.bib
@@ -17,6 +17,7 @@
 @Manual{councilR,
   title = {councilR: Functions and Templates for the Metropolitan Council},
   author = {Liz Roten},
+  year = {2020},
   note = {R package version 0.1.0},
 }
 
