--- a/intro_doc.Rmd
+++ b/intro_doc.Rmd
@@ -8,7 +8,9 @@ output:
 #   sha: "sha"
 ---
 ## Introduction
+<center>
 ![people walking on a park trail](www/Walk-on-path.png)
+</center>
 
 *Thrive MSP 2040* directs the Council to collaborate with the Metropolitan Parks and Open Space Commission, regional park implementing agencies, and state partners to strengthen equitable use of regional parks and trails.
 
