remove setView, move extra text

--- a/intro_doc.Rmd
+++ b/intro_doc.Rmd
@@ -23,9 +23,9 @@ This app is intended to assist planning staff complete of the equity analysis re
 
 ## User Guide
 
-**ACS Map** - is an interactive tool that maps key demographic variables alongside regional parks and trails.
+**Map** - is an interactive tool that maps key demographic variables alongside regional parks and trails.
         
-**ACS Summary** - is a data visualization that produces discrete demographic characteristics for user-defined inputs across the regional park and trail system. The tool incorporates existing, planned, and search areas for parks and trails. Within this tab, there are **weighted averages** which will be suitable for most users, a **buffer map** which illustrates the buffer zones geospatially, and the option for users to **download tabular data**
+**Summary** - is a data visualization that produces discrete demographic characteristics for user-defined inputs across the regional park and trail system. The tool incorporates existing, planned, and search areas for parks and trails. Within this tab, there are **weighted averages** which will be suitable for most users, a **buffer map** which illustrates the buffer zones geospatially, and the option for users to **download tabular data**
 
 
 **Population Growth** - is an interactive map which allows users to view estimated population growth through 2040 alongside regional parks and trails.
@@ -36,6 +36,11 @@ This app is intended to assist planning staff complete of the equity analysis re
 
 
 ## ACS Variable Dictionary 
+
+Statistics produced for American Community Survey and included in ACS tables are survey-based estimates and are subject to error. The errors derive from research design (including instrument bias, data frame, and sampling), the survey data collection (non-response bias and response errors), and processing by the Census Bureau (data coding, compilation processes, and case weighting), as well as statistical inference error and uncertainty (which are related to sample size and variance within the measured attributes).  
+
+
+
 The American Community Survey (ACS, 2014-2018) is the primary data source for this tool. Specific variables which can be evaluated in this tool include:
 
 **Age:** specific park/trail amenities are attractive to different age groups (e.g. younger populations may prefer play structures while older populations may prefer benches).
