--- a/intro_doc.Rmd
+++ b/intro_doc.Rmd
@@ -16,7 +16,7 @@ output:
 *Thrive MSP 2040* directs the Council to collaborate with the Metropolitan Parks and Open Space Commission, regional park implementing agencies, and state partners to strengthen equitable use of regional parks and trails.
 
 
-Accordingly, the Council implemented an equity analysis requirement for all park and trail master plans. Master plans are required to identify the demographics of areas served by the proposed park or trail with a focus on underserved populations on the basis of age, race, ethnicity, income, ability, national origin, and other pertinent characteristics (see "User Guide" for more).
+Accordingly, the Council implemented an equity analysis requirement for all park and trail master plans. Master plans are required to identify the demographics of areas served by the proposed park or trail with a focus on underserved populations on the basis of age, race, ethnicity, income, ability, national origin, and other pertinent characteristics (see the "Variable Dictionary" within the "Notes" tab for more).
 
 
 This app is intended to assist planning staff complete of the equity analysis requirement in conjunction with the <a>Regional Parks Equity Toolkit</a>. Additionally, other stakeholders are invited to use this app in service of strengthening equitable use through understanding populations and their proximities to the regional park system.
