update ref/intro text

--- a/intro_doc.Rmd
+++ b/intro_doc.Rmd
@@ -19,7 +19,7 @@ output:
 Accordingly, the Council implemented an equity analysis requirement for all park and trail master plans. Master plans are required to identify the demographics of areas served by the proposed park or trail with a focus on underserved populations on the basis of age, race, ethnicity, income, ability, national origin, and other pertinent characteristics (see the "Variable Dictionary" within the "Notes" tab for more).
 
 
-This app is intended to assist planning staff complete of the equity analysis requirement in conjunction with the <a>Regional Parks Equity Toolkit</a>. Additionally, other stakeholders are invited to use this app in service of strengthening equitable use through understanding populations and their proximities to the regional park system.
+The app complements the [Regional Parks Equity Toolkit](https://metrocouncil.org/parks/Planning/Parks-Equity-Toolkit.aspx), a set of questions and a process to clarify how regional park projects are advancing equity. Other stakeholders are invited to use this app in service of strengthening equitable use through understanding populations and their proximities to the regional park system.
 
 
 ## User Guide
@@ -42,39 +42,3 @@ This app is intended to assist planning staff complete of the equity analysis re
 
 
 
-<!-- The American Community Survey (ACS, 2014-2018) is the primary data source for this tool. Specific variables which can be evaluated in this tool include: -->
-
-<!-- **Age:** specific park/trail amenities are attractive to different age groups (e.g. younger populations may prefer play structures while older populations may prefer benches). -->
-
-<!-- - Under 15 -->
-<!-- - Age 15-24 -->
-<!-- - Age 25-64 -->
-<!-- - Over 65 -->
-
-<!-- **Race:** BIPOC (Black, Indigenous, and People of Color) populations are historically undeserved by regional parks and trails.  -->
-
-<!-- - American Indian  -->
-<!-- - Asian  -->
-<!-- - Black  -->
-<!-- - Other + Multiracial  -->
-<!-- - White - consider using (100% - %White) to evaluate %BIPOC -->
-
-<!-- **Ethnicity:** ethnicity is measured separately from race in the ACS, although race and ethnicity are often linked in practice. Hispanic populations are historically underserved by regional parks and trails. -->
-
-<!-- - Hispanic  -->
-<!-- - Non-Hispanic -->
-
-<!-- **Income:** lower income households are historically underserved by regional parks/trails. -->
-
-<!-- - Mean household income -->
-
-<!-- **Transportation:** households without vehicles may access regional parks/trails differently than households with vehicles. -->
-
-<!-- - Households without a vehicle -->
-
-<!-- **Language:** language proficiency may inform written and oral communications by regional parks/trails -->
-
-<!-- - Speaking English less than very well  -->
-<!-- - Speaking Spanish -->
-
-<!-- **Ability:** Populations with disabilities are historically underserved by regional parks and trails. These data are suppressed at the block-group level, so cannot be evaluated here although we do note the importance of considering ability to strengthen equitable use of regional parks and trails.") -->
