--- a/Rpackages.bib
+++ b/Rpackages.bib
@@ -152,3 +152,15 @@ Library},
   note = {R package version 2.0.1},
   url = {https://CRAN.R-project.org/package=janitor},
 }
+
+@Article{sf,
+  author = {Edzer Pebesma},
+  title = {{Simple Features for R: Standardized Support for Spatial Vector Data}},
+  year = {2018},
+  journal = {{The R Journal}},
+  doi = {10.32614/RJ-2018-009},
+  url = {https://doi.org/10.32614/RJ-2018-009},
+  pages = {439--446},
+  volume = {10},
+  number = {1},
+}
