--- a/reference_doc.Rmd
+++ b/reference_doc.Rmd
@@ -18,17 +18,17 @@ ACS statistics were used to calculate the percent of people with a certain chara
 ### ACS Variable dictionary
 Specific variables from the American Community Survey which can be evaluated in this tool include:
 
-**Age:** The age classification is based on the age of the person in complete years at the time of interview. Both age and date of birth are used in combination to calculate the most accurate age at the time of the interview. Respondents are asked to give an age in whole, completed years as of interview date as well as the month, day and year of birth. People are not to round an age up if the person is close to having a birthday They can estimate an age if the exact age is not known. An additional instruction on babies also asks respondents to print “0” for babies less than one year old. 
+**Age:** The age classification is based on the age of the person in complete years at the time of interview. People are not to round an age up if the person is close to having a birthday. They can estimate an age if the exact age is not known. An additional instruction on babies also asks respondents to print “0” for babies less than one year old. 
 
-**Race:** The U.S. Census Bureau collects race data in accordance with guidelines provided by the U.S. Office of Management and Budget (OMB), and these data are based on self-identification. The racial categories included in the census questionnaire generally reflect a social definition of race recognized in this country and not an attempt to define race biologically, anthropologically, or genetically. In addition, it is recognized that the categories of the race item include racial and national origin or sociocultural groups. People may choose to report more than one race to indicate their racial mixture, such as “American Indian” and “White.” People who identify their origin as Hispanic, Latino, or Spanish may be of any race.
+**Race:** The racial categories included in the census questionnaire generally reflect a social definition of race recognized in this country and not an attempt to define race biologically, anthropologically, or genetically. In addition, it is recognized that the categories of the race item include racial and national origin or sociocultural groups. People may choose to report more than one race to indicate their racial mixture, such as “American Indian” and “White.” People who identify their origin as Hispanic, Latino, or Spanish may be of any race.
 
 **Ethnicity:** The terms “Hispanic,” “Latino,” and “Spanish” are used interchangeably. Some respondents identify with all three terms while others may identify with only one of these three specific terms. Hispanics or Latinos who identify with the terms “Hispanic,” “Latino,” or “Spanish” are those who classify themselves in one or more of the specific Hispanic, Latino, or Spanish categories listed on the questionnaire (“Mexican,” “Puerto Rican,” or “Cuban”) as well as those who indicate that they are “another Hispanic, Latino, or Spanish origin.” People who do not identify with any of the specific origins listed on the questionnaire but indicate that they are “another Hispanic, Latino, or Spanish origin” are those who identify as Argentinian, Colombian, Dominican, Nicaraguan, Salvadoran, Spaniard, or other Spanish cultures or origins. 
 
 **Income:** Asked of the population 15 years old and over. “Total income” is the sum of the amounts reported separately for wage or salary income; net self-employment income; interest, dividends, or net rental or royalty income or income from estates and trusts; Social Security or Railroad Retirement income; Supplemental Security Income (SSI); public assistance or welfare payments; retirement, survivor, or disability pensions; and all other income.
 
-**Transportation:** The question was asked at occupied housing units. These data show the number of passenger cars, vans, and pickup or panel trucks of one-ton (2,000 pounds) capacity or less kept at home and available for the use of household members. Vehicles rented or leased for one month or more, company vehicles, and police and government vehicles are included if kept at home and used for non-business purposes. Motorcycles or other recreational vehicles are excluded. Dismantled or immobile vehicles are excluded. Vehicles kept at home but used only for business purposes also are excluded.
+**Transportation:** These data show the number of passenger cars, vans, and pickup or panel trucks of one-ton (2,000 pounds) capacity or less kept at home and available for the use of household members. Vehicles rented or leased for one month or more, company vehicles, and police and government vehicles are included if kept at home and used for non-business purposes. Motorcycles or other recreational vehicles are excluded. Dismantled or immobile vehicles are excluded. Vehicles kept at home but used only for business purposes also are excluded.
 
-**Language:** Respondents who reported speaking a language other than English (question 14a in the 2019 American Community Survey (ACS)) were asked to indicate their English-speaking ability (question 14c in the 2019 ACS) based on one of the following categories: “Very well,” “Well,” “Not well,” or “Not at all.” Those who answered “Well,” “Not well,” or “Not at all” are sometimes referred to as “Less than ‘very well.’” Respondents were not instructed on how to interpret the response categories in this question.
+**Language:** Respondents who reported speaking a language other than English were asked to indicate their English-speaking ability based on one of the following categories: “Very well,” “Well,” “Not well,” or “Not at all.” Those who answered “Well,” “Not well,” or “Not at all” are sometimes referred to as “Less than ‘very well.’” Respondents were not instructed on how to interpret the response categories in this question.
 
 **Ability:** Disability status is determined from the answers from  six types of difficulty. For children under 5 years old, hearing and vision difficulty are used to determine disability status. For children between the ages of 5 and 14, disability status is determined from hearing, vision, cognitive, ambulatory, and self-care difficulties. For people aged 15 years  63 and older, they are considered to have a disability if they have difficulty with any one of the six difficulty types (hearing, vision, cognitive, ambulatory, self-care, independent living difficulty).
 
